kubernetes-manifests/components/network-boundaries/istio/authorization-policy-frontend-egress.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Frontend may only initiate mTLS calls to configured backend API services.
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-egress-backend-services
spec:
  selector:
    matchLabels:
      app: frontend
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts:
              - istiod.istio-system.svc.cluster.local
              - "*.istio-system.svc.cluster.local"
            ports:
              - "15012"
              - "15010"
              - "443"
    - to:
        - operation:
            hosts:
              - kube-dns.kube-system.svc.cluster.local
              - "*.kube-system.svc.cluster.local"
            ports:
              - "53"
    - to:
        - operation:
            hosts:
              - balancereader
              - balancereader.default.svc.cluster.local
              - transactionhistory
              - transactionhistory.default.svc.cluster.local
              - userservice
              - userservice.default.svc.cluster.local
              - contacts
              - contacts.default.svc.cluster.local
              - ledgerwriter
              - ledgerwriter.default.svc.cluster.local
            ports:
              - "8080"
